<resources>
    <string name="app_name">Hunger Bells</string>
    <string name="app_logoString">App Logo</string>
    <string name="phoneNumberString">9817158944</string>
    <string name="phoneNumberHintString">Phone Number</string>
    <string name="passwordString">sumit</string>
    <string name="passwordHintString">Password</string>
    <string name="log_inString">LOG IN</string>
    <string name="forgot_passwordString">Forgot Password ?</string>
    <string name="sign_upString">SIGN UP</string>
    <string name="new_userString">New User ?</string>
    <string name="backgroundString">Background</string>
    <string name="otpString">OTP</string>
    <string name="user_nameHintString">User Name</string>
    <string name="sign_uppString">Sign Up</string>
    <string name="usernameString" />
    <string name="otp" />
    <string name="one_time_passwordString">One Time Password</string>
    <string name="verifyButtonString">VERIFY</string>
    <string name="already_have_an_accountString">Already have an account ?</string>
    <string name="verify_your_numberString">Verify your Number</string>
    <string name="Get_StartedString">Button</string>
    <string name="get_startedString">Get Started</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="currentUserNameString">Deep</string>
    <string name="menuString">Menu</string>
    <string name="cartString">Cart</string>
    <string name="ordersString">Orders</string>
    <string name="sign_outString">Sign Out</string>
    <string name="name_of_menuString">Name of Menu</string>
    <string name="categoryString">Category</string>
    <string name="food_list_string">Food List</string>
    <string name="food_imageString">Food Image</string>
    <string name="name_of_foodString">Name of Food</string>
    <string name="_0String">$0</string>
    <string name="favourite_imageString">Favourite Image</string>
    <string name="food_nameString">Food Name</string>
    <string name="_1_000String">1,000</string>
    <string name="descriptionString">Description</string>
    <string name="show_commentString">Show Comment</string>
    <string name="nameString">Name</string>
    <string name="add_onString">Add On</string>
    <string name="exampleString">Example</string>
    <string name="sizeString">Size</string>
    <string name="addressString">Address</string>
    <string name="addonString">Addon</string>
    <string name="searchString">Search</string>
    <string name="clear_cartString">Clear Cart</string>
    <string name="priceString">100.0</string>
    <string name="enter_your_addressString">Enter your address</string>
    <string name="delivery_methodString">Delivery Method</string>
    <string name="home_addressString">Home Address</string>
    <string name="other_addressString">Other Address</string>
    <string name="ship_current_addressString">Ship current address</string>
    <string name="payment_methodString">Payment Method</string>
    <string name="cash_on_deliveryString">Cash On Delivery</string>
    <string name="braintreeString">Braintree</string>
    <string name="enter_your_commentString">Enter your comment</string>
    <string name="your_addressString">Your Address</string>
    <string name="status_placedString">Status: Placed</string>
    <string name="order_commentString">Order comment:</string>
    <string name="order_numberString">Order Number:</string>
    <string name="today_at_12_00_00_pmString">Today at:12:00:00 pm</string>
    <string name="write_your_feedbackString">Write your feedback…</string>
    <string name="phone_numberString">Phone Numbber</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAmWOjRpbC7g-vpMyxalgFgPvv7q5TB1Lg</string>
    <string name="update_profileString">Update Profile</string>
    <string name="empty_cartString">EMPTY CART</string>
    <string name="total_0_0String">Total: 0.0</string>
    <string name="place_orderString">Place Order</string>
    <string name="okString">OK</string>
    <string name="order_detailString">Order Detail</string>
    <string name="quantity_1String">Quantity: 1</string>
    <string name="addon_defaultString">Addon: Default</string>
    <string name="size_mediumString">Size: Medium</string>
    <string name="title_activity_tracking_order">Map</string>
    <string name="newsString">News</string>

</resources>