<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_menu"
            android:iconTint="@color/white"
            android:title="@string/menuString"
            tools:targetApi="o" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart"
            android:iconTint="@color/white"
            android:title="@string/cartString"
            tools:targetApi="o" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_orders"
            android:iconTint="@color/white"
            android:title="@string/ordersString"
            tools:targetApi="o" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_log_out"
            android:iconTint="@color/white"
            android:title="@string/sign_outString"
            tools:targetApi="o" />

    </group>
</menu>