<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <fragment
        android:id="@+id/places_autocomplete_fragment"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_address_detail"
        android:text="@string/your_addressString"
        android:fontFamily="@font/montserrat"
        android:textSize="16sp"
        android:autofillHints=""
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_comment"
            android:hint="@string/enter_your_commentString"
            android:fontFamily="@font/montserrat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textShortMessage" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:text="@string/delivery_methodString"
        android:fontFamily="@font/montserrat"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#C5C5C5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RadioGroup
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdi_home_address"
            android:checked="true"
            android:text="@string/home_addressString"
            android:fontFamily="@font/montserrat"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="#464646"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rdi_other_address"
            android:text="@string/other_addressString"
            android:fontFamily="@font/montserrat"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="#464646"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rdi_ship_this_address"
            android:text="@string/ship_current_addressString"
            android:fontFamily="@font/montserrat"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="#464646"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <TextView
        android:text="@string/payment_methodString"
        android:fontFamily="@font/montserrat"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#C5C5C5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdi_cod"
            android:checked="true"
            android:text="@string/cash_on_deliveryString"
            android:fontFamily="@font/montserrat"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="#464646"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rdi_braintree"
            android:text="@string/braintreeString"
            android:fontFamily="@font/montserrat"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="#464646"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RadioGroup>

</LinearLayout>