<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginBottom="0dp"
    app:cardCornerRadius="0dp"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/img_food_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/food_imageString" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:background="@color/borderColor"
            android:padding="10dp"
            android:weightSum="10"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_food_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/name_of_foodString"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/txt_food_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/_0String"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    />
            </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/img_fav"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favorite_border"
                app:tint="@color/white"
                android:contentDescription="@string/favourite_imageString"
                tools:ignore="NestedWeights" />

            <ImageView
                android:id="@+id/img_quick_cart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_cart"
                app:tint="@color/white"
                android:contentDescription="@string/cartString" />


        </LinearLayout>




        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>