<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/backgroundString"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_background_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="0dp"
        android:layout_height="213dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_logoString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_logo_icon_foreground" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/back_button"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_your_numberString"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout1"
        app:layout_constraintStart_toStartOf="@+id/frameLayout1" />

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/custom_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView">

        <EditText
            android:id="@+id/otpEditText"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:autofillHints=""
            android:background="@null"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/one_time_passwordString"
            android:inputType="phone"
            android:maxLength="6"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/otp"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="57dp"
            tools:layout_editor_absoluteY="360dp" />

        <Button
            android:id="@+id/resendOtp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="250dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/ic_resend"
            android:fontFamily="@font/montserrat" />

    </FrameLayout>

    <Button
        android:id="@+id/verifyButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/montserrat"
        android:text="@string/verifyButtonString"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout1" />


</androidx.constraintlayout.widget.ConstraintLayout>